--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
         </div>
       </section>
 
-      <section class="advantages">
+      <section id="about" class="about">
         <div class="container">
           <h2>Что мы делаем?</h2>
 
@@ -236,7 +236,7 @@
               время и стоимость их реализации для клиента
             </p>
 
-            <div class="advantages__tag-wrap">
+            <div class="about__tag-wrap">
               <div class="bubble-wrap">
                 <div class="bubble">
                   <span> Поддержка </span>
@@ -273,11 +273,11 @@
                 </div>
               </div>
 
-              <div class="advantages__tag">
+              <div class="about__tag">
                 <span> Веб-разработка </span>
               </div>
 
-              <div class="advantages__tag">
+              <div class="about__tag">
                 <span> Аудит конкурентов </span>
               </div>
             </div>
@@ -285,7 +285,7 @@
         </div>
       </section>
 
-      <section class="integrations">
+      <section id="integrations" class="integrations">
         <div class="container">
           <div class="bubbles bubbles--decorative">
             <div class="circle circle--big">
@@ -512,7 +512,7 @@
         </div>
       </section>
 
-      <section class="examples">
+      <section id="examples" class="examples">
         <div class="container">
           <div class="bubbles bubbles--decorative">
             <div class="circle circle--big">
@@ -698,7 +698,7 @@
         </div>
       </section>
 
-      <section class="stats">
+      <section id="stats" class="stats">
         <div class="container">
           <div class="stats__wrap">
             <div class="bubbles">
@@ -784,19 +784,19 @@
         <hr />
 
         <div class="footer__anchors">
-          <a href=" javascript:void(0);">О нас</a>
-          <a href="javascript:void(0);">Интеграции</a>
-          <a href="javascript:void(0);">Тарифы</a>
-          <a href="javascript:void(0);">Преимущества</a>
+          <a href="#about">О нас</a>
+          <a href="#integrations">Интеграции</a>
+          <a href="#examples">Тарифы</a>
+          <a href="#stats">Преимущества</a>
         </div>
       </div>
     </footer>
 
     <aside>
-      <a href=" javascript:void(0);">О нас</a>
-      <a href="javascript:void(0);">Преимущества</a>
-      <a href="javascript:void(0);">Интеграции</a>
-      <a href="javascript:void(0);">Тарифы</a>
+      <a href="#about">О нас</a>
+      <a href="#integrations">Интеграции</a>
+      <a href="#examples">Тарифы</a>
+      <a href="#stats">Преимущества</a>
       <a href="tel:+79282882828">8 928 288 28 28</a>
 
       <div class="social-icons-wrapper">
