--- a/src/index.html
+++ b/src/index.html
@@ -792,7 +792,7 @@
       </div>
     </footer>
 
-    <aside>
+    <aside class="_active">
       <a href="#about">О нас</a>
       <a href="#integrations">Интеграции</a>
       <a href="#examples">Тарифы</a>
