--- a/src/index.html
+++ b/src/index.html
@@ -792,7 +792,9 @@
       </div>
     </footer>
 
-    <aside class="_active">
+    <aside class="">
+      <div class="container">
+        
       <a href="#about">О нас</a>
       <a href="#integrations">Интеграции</a>
       <a href="#examples">Тарифы</a>
@@ -816,6 +818,8 @@
       <a class="button" href="javascript:void(0);" role="button">
         Заказать сайт
       </a>
+
+    </div>
     </aside>
 
   </div>
