form and popup fix

--- a/src/index.html
+++ b/src/index.html
@@ -792,7 +792,7 @@
       </div>
     </footer>
 
-    <aside class="">
+    <aside>
       <div class="container">
         
       <a href="#about">О нас</a>
