--- a/src/index.html
+++ b/src/index.html
@@ -648,6 +648,22 @@
 
             <div class="floors__highlight"></div>
           </div>
+
+          <div class="floors__variants-wrap">
+            <div class="floors__variants">
+              <div class="floors__floor-and-space">
+                <div class="floors__floor"><span></span> этаж</div>
+                <div class="floors__space">от 150М²</div>
+              </div>
+              <div class="floors__on-sell">Свободно квартир: 4</div>
+              <hr />
+              <div class="floors__rooms">
+                <div class="floors__room">1 комн</div>
+                <div class="floors__room">2 комн</div>
+                <div class="floors__room floors__room--disabled">3 комн</div>
+              </div>
+            </div>
+          </div>
         </section>
 
         <section id="examples" class="examples">
