--- a/src/index.html
+++ b/src/index.html
@@ -653,9 +653,9 @@
             <div class="floors__variants">
               <div class="floors__floor-and-space">
                 <div class="floors__floor"><span></span> этаж</div>
-                <div class="floors__space">от 150М²</div>
+                <div class="floors__space">от <span></span>М²</div>
               </div>
-              <div class="floors__on-sell">Свободно квартир: 4</div>
+              <div class="floors__on-sell">Свободно квартир: <span></span></div>
               <hr />
               <div class="floors__rooms">
                 <div class="floors__room">1 комн</div>
