--- a/src/index.html
+++ b/src/index.html
@@ -651,6 +651,9 @@
 
           <div class="floors__variants-wrap">
             <div class="floors__variants">
+              <div class="floors__cross-wrap">
+                <div class="floors__cross"></div>
+              </div>
               <div class="floors__floor-and-space">
                 <div class="floors__floor"><span></span> этаж</div>
                 <div class="floors__space">от <span></span>М²</div>
@@ -660,7 +663,7 @@
               <div class="floors__rooms">
                 <div class="floors__room">1 комн</div>
                 <div class="floors__room">2 комн</div>
-                <div class="floors__room floors__room--disabled">3 комн</div>
+                <div class="floors__room">3 комн</div>
               </div>
             </div>
           </div>
