+ button in floors section

--- a/src/index.html
+++ b/src/index.html
@@ -667,6 +667,11 @@
               </div>
             </div>
           </div>
+
+          <a class="button" href="javascript:void(0);" role="link">
+            Заказать сайт
+          </a>
+
         </section>
 
         <section id="examples" class="examples">
