changes for landscape mode

--- a/src/index.html
+++ b/src/index.html
@@ -800,17 +800,27 @@
             </p>
           </div>
 
-          <div class="result__pic">
-            <picture>
-              <source
-                media="(min-width: 768px)"
-                srcset="assets/img/vectors/manOnBoat.svg"
-              />
-              <img src="assets/img/vectors/manOnBoat--cropped.svg" alt="" />
-            </picture>
-          </div>
+          <div class="result__pics">
+            <div class="result__pic">
+              <picture>
+                <source
+                  media="(min-width: 768px)"
+                  srcset="assets/img/vectors/manOnBoat.svg"
+                />
+                <img src="assets/img/vectors/manOnBoat--cropped.svg" alt="" />
+              </picture>
+            </div>
 
-          <div class="container">
+            <div class="result__pic">
+              <picture>
+                <source
+                  media="(min-width: 768px)"
+                  srcset="assets/img/vectors/hugger.svg"
+                />
+                <img src="assets/img/vectors/hugger--cropped.svg" alt="" />
+              </picture>
+            </div>
+
             <div class="bubbles">
               <div class="bubble-wrap bubble-wrap-rectangle">
                 <div class="bubble">
@@ -838,16 +848,6 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="result__pic">
-            <picture>
-              <source
-                media="(min-width: 768px)"
-                srcset="assets/img/vectors/hugger.svg"
-              />
-              <img src="assets/img/vectors/hugger--cropped.svg" alt="" />
-            </picture>
           </div>
         </section>
 
