--- a/src/index.html
+++ b/src/index.html
@@ -251,6 +251,30 @@
                 <div class="hamburger-inner"></div>
               </div>
             </div>
+
+            <div class="social-icons-wrapper">
+              <a
+                href="https://www.instagram.com/aleskeroff_ru/"
+                class="social-icons__icon"
+                role="link"
+              >
+                <svg class="svg-icon">
+                  <use xlink:href="#i-inst"></use>
+                </svg>
+              </a>
+
+              <a
+                href="mailto:info@aleskeroff.ru"
+                class="social-icons__icon"
+                role="link"
+              >
+                <svg class="svg-icon">
+                  <use xlink:href="#i-mail"></use>
+                </svg>
+              </a>
+            </div>
+
+            <a href="tel:+79282882828">8 928 288 28 28</a>
           </nav>
         </div>
       </header>
@@ -820,8 +844,6 @@
                 <img src="assets/img/vectors/hugger--cropped.svg" alt="" />
               </picture>
             </div>
-
-            
           </div>
 
           <div class="bubbles">
@@ -851,7 +873,6 @@
               </div>
             </div>
           </div>
-          
         </section>
 
         <section class="narrate">
@@ -999,7 +1020,7 @@
 
           <div class="social-icons-wrapper">
             <a
-              href="javascript:void(0);"
+              href="https://www.instagram.com/aleskeroff_ru/"
               class="social-icons__icon"
               role="link"
             >
@@ -1009,7 +1030,7 @@
             </a>
 
             <a
-              href="javascript:void(0);"
+              href="mailto:info@aleskeroff.ru"
               class="social-icons__icon"
               role="link"
             >
@@ -1048,7 +1069,7 @@
 
           <div class="social-icons-wrapper">
             <a
-              href="javascript:void(0);"
+              href="https://www.instagram.com/aleskeroff_ru/"
               class="social-icons__icon"
               role="link"
             >
@@ -1058,7 +1079,7 @@
             </a>
 
             <a
-              href="javascript:void(0);"
+              href="mailto:info@aleskeroff.ru"
               class="social-icons__icon"
               role="link"
             >
