--- a/src/index.html
+++ b/src/index.html
@@ -360,38 +360,44 @@
             </div>
 
             <div class="bubbles">
-              <div class="bubble-wrap bubble-wrap-square--big">
-                <div class="bubble">
-                  <img src="assets/img/icons/biceps.webp" alt="" />
+              <div class="about__cell">
+                <div class="bubble-wrap bubble-wrap-square--big">
+                  <div class="bubble">
+                    <img src="assets/img/icons/biceps.webp" alt="" />
+                  </div>
                 </div>
+
+                <p>
+                  Разрабатываем проекты любой сложности от простых
+                  сайтов-визиток до мощных проектов с миллионной посещаемостью
+                </p>
               </div>
 
-              <p>
-                Разрабатываем проекты любой сложности от простых сайтов-визиток
-                до мощных проектов с миллионной посещаемостью
-              </p>
-
-              <div class="bubble-wrap bubble-wrap-square--big">
-                <div class="bubble">
-                  <img src="assets/img/icons/bookmark.webp" alt="" />
+              <div class="about__cell">
+                <div class="bubble-wrap bubble-wrap-square--big">
+                  <div class="bubble">
+                    <img src="assets/img/icons/bookmark.webp" alt="" />
+                  </div>
                 </div>
+
+                <p>
+                  Полную аналитику существующего продукта, включающая анализ
+                  эффективности и CJM
+                </p>
               </div>
 
-              <p>
-                Полную аналитику существующего продукта, включающая анализ
-                эффективности и CJM
-              </p>
-
-              <div class="bubble-wrap bubble-wrap-square--big">
-                <div class="bubble">
-                  <img src="assets/img/icons/alarm-clock.webp" alt="" />
+              <div class="about__cell">
+                <div class="bubble-wrap bubble-wrap-square--big">
+                  <div class="bubble">
+                    <img src="assets/img/icons/alarm-clock.webp" alt="" />
+                  </div>
                 </div>
-              </div>
 
-              <p>
-                Разрабатываем готовые решения и модули для сайтов. Сокращаем
-                время и стоимость их реализации для клиента
-              </p>
+                <p>
+                  Разрабатываем готовые решения и модули для сайтов. Сокращаем
+                  время и стоимость их реализации для клиента
+                </p>
+              </div>
 
               <div class="about__tag-wrap">
                 <div class="bubble-wrap">
