--- a/src/index.html
+++ b/src/index.html
@@ -750,68 +750,69 @@
             </div>
 
             <h2>Примеры пакетных решений</h2>
-          </div>
 
-          <div class="cards">
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__headline">Сайт новостройки</div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Эффективный одностраничный сайт. Расскажет обо всех
-                  преимуществах объекта и позволит осуществить подбор квартиры.
+            <div class="cards">
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__headline">Сайт новостройки</div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Эффективный одностраничный сайт. Расскажет обо всех
+                    преимуществах объекта и позволит осуществить подбор
+                    квартиры.
+                  </div>
+                  <hr class="cards__hr" />
+                  <div class="cards__subheadline">
+                    Выбор планировок квартир<br />
+                    Ипотечный калькулятор<br />
+                    Модуль онлайн камер на объекте<br />
+                    Форма обратного звонка с видео<br />
+                    Модуль онлайн камер на объекте<br />
+                    Чат-бот / 3D тур
+                  </div>
+                  <a
+                    class="button button--hollow"
+                    href="javascript:void(0);"
+                    role="button"
+                  >
+                    Запросить смету
+                  </a>
                 </div>
-                <hr class="cards__hr" />
-                <div class="cards__subheadline">
-                  Выбор планировок квартир<br />
-                  Ипотечный калькулятор<br />
-                  Модуль онлайн камер на объекте<br />
-                  Форма обратного звонка с видео<br />
-                  Модуль онлайн камер на объекте<br />
-                  Чат-бот / 3D тур
-                </div>
-                <a
-                  class="button button--hollow"
-                  href="javascript:void(0);"
-                  role="button"
-                >
-                  Запросить смету
-                </a>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__headline">Сайт застройщика</div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Полнофункциональный корпоративный сайт строительной компании
-                </div>
-                <hr class="cards__hr" />
-                <div class="cards__subheadline">
-                  Коммерческая недвижимость<br />
-                  Модуль для обзора объекта 360°<br />
-                  Модуль онлайн камер на объекте<br />
-                  Форма обратного звонка с видео<br />
-                  Визуальный выбор<br />
-                  Ипотечный калькулятор<br />
-                  Каталог объектов <br />
-                  Чат-бот / 3D тур<br />
-                  Каталог квартир
-                </div>
-                <a
-                  class="button button--hollow"
-                  href="javascript:void(0);"
-                  role="button"
-                >
-                  Запросить смету
-                </a>
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__headline">Сайт застройщика</div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Полнофункциональный корпоративный сайт строительной компании
+                  </div>
+                  <hr class="cards__hr" />
+                  <div class="cards__subheadline">
+                    Коммерческая недвижимость<br />
+                    Модуль для обзора объекта 360°<br />
+                    Модуль онлайн камер на объекте<br />
+                    Форма обратного звонка с видео<br />
+                    Визуальный выбор<br />
+                    Ипотечный калькулятор<br />
+                    Каталог объектов <br />
+                    Чат-бот / 3D тур<br />
+                    Каталог квартир
+                  </div>
+                  <a
+                    class="button button--hollow"
+                    href="javascript:void(0);"
+                    role="button"
+                  >
+                    Запросить смету
+                  </a>
 
-                <div class="bubbles">
-                  <div class="bubble-wrap bubble-wrap-rectangle">
-                    <div class="bubble">
-                      <img src="assets/img/icons/office.webp" alt="" />
-                      <span>Лучшее предложение</span>
+                  <div class="bubbles">
+                    <div class="bubble-wrap bubble-wrap-rectangle">
+                      <div class="bubble">
+                        <img src="assets/img/icons/office.webp" alt="" />
+                        <span>Лучшее предложение</span>
+                      </div>
                     </div>
                   </div>
                 </div>
