--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
       sizes="270x270"
       href="assets/fav/favicon-270.png"
     />
-    
+
     <meta name="theme-color" content="#000000" />
     <script>
       var lang_system = "ru";
@@ -334,6 +334,11 @@
 
             <a class="button" href="javascript:void(0);" role="link">
               Заказать сайт
+            </a>
+
+            <a href="#about" class="intro__scroll" role="button">
+              <div class="scroll__chevron"></div>
+              <div class="scroll__chevron"></div>
             </a>
           </div>
         </section>
@@ -679,8 +684,8 @@
         <section class="floors">
           <div class="floors__bg">
             <picture>
-              <source media="(min-width: )" srcset="" />
-              <img src="assets/img/floors--m.webp" alt="" />
+              <source media="(min-width: 1280px)" srcset="" />
+              <img src="assets/img/floors--m.webp" alt="Схема этажей здания" />
             </picture>
 
             <div class="floors__marker">
@@ -750,7 +755,9 @@
               </div>
             </div>
 
-            <h2>Примеры пакетных решений</h2>
+            <div class="examples__text-wrap">
+              <h2>Примеры пакетных решений</h2>
+            </div>
 
             <div class="cards">
               <div class="cards__card-bg">
