--- a/src/index.html
+++ b/src/index.html
@@ -336,10 +336,10 @@
               Заказать сайт
             </a>
 
-            <a href="#about" class="intro__scroll" role="button">
+            <div class="intro__scroll" role="button">
               <div class="scroll__chevron"></div>
               <div class="scroll__chevron"></div>
-            </a>
+            </div>
           </div>
         </section>
 
@@ -474,139 +474,144 @@
                 вашем новом сайте
               </p>
             </div>
-          </div>
 
-          <div class="cards">
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">Каталог квартир по параметрам</div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Продуманный каталог подбора квартир в жилом комплексе
+            <div class="cards">
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">
+                    Каталог квартир по параметрам
+                  </div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Продуманный каталог подбора квартир в жилом комплексе
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">3D тур</div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Эффектная демонстрация вашей недвижимости потенциальным
-                  покупателям
-                </div>
-                <div class="cards__img">
-                  <div class="bubble-wrap bubble-wrap-square--small">
-                    <div class="bubble">
-                      <img src="assets/img/icons/houses.webp" alt="" />
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">3D тур</div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Эффектная демонстрация вашей недвижимости потенциальным
+                    покупателям
+                  </div>
+                  <div class="cards__img">
+                    <div class="bubble-wrap bubble-wrap-square--small">
+                      <div class="bubble">
+                        <img src="assets/img/icons/houses.webp" alt="" />
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">Шахматка выбора квартир</div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Удобный формат выбора квартир по генплану или фасаду здания
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">Шахматка выбора квартир</div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Удобный формат выбора квартир по генплану или фасаду здания
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">
-                  Форма обратного звонка с видео
-                </div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Форма обратного звонка с видеорядом для большего вовлечения
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">
+                    Форма обратного звонка с видео
+                  </div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Форма обратного звонка с видеорядом для большего вовлечения
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">
-                  Каталог коммерческой недвижимости
-                </div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Каталог недвижимости для бизнеса с визуальный выбором и
-                  параметрическим фильтром
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">
+                    Каталог коммерческой недвижимости
+                  </div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Каталог недвижимости для бизнеса с визуальный выбором и
+                    параметрическим фильтром
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">Чат-бот</div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Искусственной интеллект для автоматизируемого общения с вашими
-                  потенциальными клиентами
-                </div>
-                <div class="cards__img">
-                  <div class="bubble-wrap bubble-wrap-square--small">
-                    <div class="bubble">
-                      <img src="assets/img/icons/speech-balloon.webp" alt="" />
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">Чат-бот</div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Искусственной интеллект для автоматизируемого общения
+                    с вашими потенциальными клиентами
+                  </div>
+                  <div class="cards__img">
+                    <div class="bubble-wrap bubble-wrap-square--small">
+                      <div class="bubble">
+                        <img
+                          src="assets/img/icons/speech-balloon.webp"
+                          alt=""
+                        />
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">Ипотечный калькулятор</div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Ипотечный калькулятор в несколько шагов с удобной навигацией и
-                  заявкой на расчет
-                </div>
-                <div class="cards__img">
-                  <div class="bubble-wrap bubble-wrap-square--small">
-                    <div class="bubble">
-                      <img src="assets/img/icons/coin.webp" alt="" />
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">Ипотечный калькулятор</div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Ипотечный калькулятор в несколько шагов с удобной навигацией
+                    и заявкой на расчет
+                  </div>
+                  <div class="cards__img">
+                    <div class="bubble-wrap bubble-wrap-square--small">
+                      <div class="bubble">
+                        <img src="assets/img/icons/coin.webp" alt="" />
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">
-                  Модуль для обзора объекта 360°
-                </div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Возможность размещения на сайте обзора вашего объекта в режиме
-                  360°
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">
+                    Модуль для обзора объекта 360°
+                  </div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Возможность размещения на сайте обзора вашего объекта
+                    в режиме 360°
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="cards__card-bg">
-              <div class="cards__card">
-                <div class="cards__toggle js-anim"></div>
-                <div class="cards__headline">
-                  Модуль онлайн камер на объекте
-                </div>
-                <hr class="cards__hr" />
-                <div class="cards__text">
-                  Удобный формат обзора стадии строительства объекта в режиме
-                  онлайн
+              <div class="cards__card-bg">
+                <div class="cards__card">
+                  <div class="cards__toggle js-anim"></div>
+                  <div class="cards__headline">
+                    Модуль онлайн камер на объекте
+                  </div>
+                  <hr class="cards__hr" />
+                  <div class="cards__text">
+                    Удобный формат обзора стадии строительства объекта в режиме
+                    онлайн
+                  </div>
                 </div>
               </div>
             </div>
@@ -684,7 +689,10 @@
         <section class="floors">
           <div class="floors__bg">
             <picture>
-              <source media="(min-width: 1280px)" srcset="" />
+              <source
+                media="(min-width: 1280px)"
+                srcset="assets/img/floors.webp"
+              />
               <img src="assets/img/floors--m.webp" alt="Схема этажей здания" />
             </picture>
 
@@ -1019,7 +1027,7 @@
 
       <footer class="footer">
         <div class="container">
-          <div class="logo">
+          <div class="logo" title="В начало">
             <a href="javascript:void(0);">
               <svg class="svg-icon">
                 <use xlink:href="#i-logo"></use>
