--- a/src/index.html
+++ b/src/index.html
@@ -480,7 +480,7 @@
                 <div class="cards__card">
                   <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
-                    Каталог квартир по параметрам
+                    Каталог квартир<br />по параметрам
                   </div>
                   <hr class="cards__hr" />
                   <div class="cards__text">
@@ -511,7 +511,9 @@
               <div class="cards__card-bg">
                 <div class="cards__card">
                   <div class="cards__toggle js-anim"></div>
-                  <div class="cards__headline">Шахматка выбора квартир</div>
+                  <div class="cards__headline">
+                    Шахматка выбора<br />квартир
+                  </div>
                   <hr class="cards__hr" />
                   <div class="cards__text">
                     Удобный формат выбора квартир по генплану или фасаду здания
@@ -523,7 +525,7 @@
                 <div class="cards__card">
                   <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
-                    Форма обратного звонка с видео
+                    Форма обратного звонка<br />с видео
                   </div>
                   <hr class="cards__hr" />
                   <div class="cards__text">
@@ -536,7 +538,7 @@
                 <div class="cards__card">
                   <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
-                    Каталог коммерческой недвижимости
+                    Каталог коммерческой<br />недвижимости
                   </div>
                   <hr class="cards__hr" />
                   <div class="cards__text">
@@ -591,7 +593,7 @@
                 <div class="cards__card">
                   <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
-                    Модуль для обзора объекта 360°
+                    Модуль для обзора объекта<br />360°
                   </div>
                   <hr class="cards__hr" />
                   <div class="cards__text">
@@ -605,7 +607,7 @@
                 <div class="cards__card">
                   <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
-                    Модуль онлайн камер на объекте
+                    Модуль онлайн камер<br />на объекте
                   </div>
                   <hr class="cards__hr" />
                   <div class="cards__text">
@@ -779,12 +781,12 @@
                   </div>
                   <hr class="cards__hr" />
                   <div class="cards__subheadline">
-                    Выбор планировок квартир<br />
-                    Ипотечный калькулятор<br />
-                    Модуль онлайн камер на объекте<br />
-                    Форма обратного звонка с видео<br />
-                    Модуль онлайн камер на объекте<br />
-                    Чат-бот / 3D тур
+                    <p>Выбор планировок квартир</p>
+                    <p>Ипотечный калькулятор</p>
+                    <p>Модуль онлайн камер на объекте</p>
+                    <p>Форма обратного звонка с видео</p>
+                    <p>Модуль онлайн камер на объекте</p>
+                    <p>Чат-бот / 3D тур</p>
                   </div>
                   <a
                     class="button button--hollow"
@@ -805,15 +807,15 @@
                   </div>
                   <hr class="cards__hr" />
                   <div class="cards__subheadline">
-                    Коммерческая недвижимость<br />
-                    Модуль для обзора объекта 360°<br />
-                    Модуль онлайн камер на объекте<br />
-                    Форма обратного звонка с видео<br />
-                    Визуальный выбор<br />
-                    Ипотечный калькулятор<br />
-                    Каталог объектов <br />
-                    Чат-бот / 3D тур<br />
-                    Каталог квартир
+                    <p>Коммерческая недвижимость</p>
+                    <p>Модуль для обзора объекта 360°</p>
+                    <p>Модуль онлайн камер на объекте</p>
+                    <p>Форма обратного звонка с видео</p>
+                    <p>Визуальный выбор</p>
+                    <p>Ипотечный калькулятор</p>
+                    <p>Каталог объектов</p>
+                    <p>Чат-бот / 3D тур</p>
+                    <p>Каталог квартир</p>
                   </div>
                   <a
                     class="button button--hollow"
@@ -824,7 +826,7 @@
                   </a>
 
                   <div class="bubbles">
-                    <div class="bubble-wrap bubble-wrap-rectangle">
+                    <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-rectangle">
                       <div class="bubble">
                         <img src="assets/img/icons/office.webp" alt="" />
                         <span>Лучшее предложение</span>
