--- a/src/index.html
+++ b/src/index.html
@@ -499,7 +499,12 @@
                     покупателям
                   </div>
                   <div class="cards__img">
-                    <div class="bubble-wrap bubble-wrap-square--small">
+                    <div
+                      class="
+                        bubble-wrap bubble-wrap--big-br
+                        bubble-wrap-square--small
+                      "
+                    >
                       <div class="bubble">
                         <img src="assets/img/icons/houses.webp" alt="" />
                       </div>
@@ -558,7 +563,12 @@
                     с вашими потенциальными клиентами
                   </div>
                   <div class="cards__img">
-                    <div class="bubble-wrap bubble-wrap-square--small">
+                    <div
+                      class="
+                        bubble-wrap bubble-wrap--big-br
+                        bubble-wrap-square--small
+                      "
+                    >
                       <div class="bubble">
                         <img
                           src="assets/img/icons/speech-balloon.webp"
@@ -580,7 +590,12 @@
                     и заявкой на расчет
                   </div>
                   <div class="cards__img">
-                    <div class="bubble-wrap bubble-wrap-square--small">
+                    <div
+                      class="
+                        bubble-wrap bubble-wrap--big-br
+                        bubble-wrap-square--small
+                      "
+                    >
                       <div class="bubble">
                         <img src="assets/img/icons/coin.webp" alt="" />
                       </div>
@@ -826,7 +841,12 @@
                   </a>
 
                   <div class="bubbles">
-                    <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-rectangle">
+                    <div
+                      class="
+                        bubble-wrap bubble-wrap--big-br
+                        bubble-wrap-rectangle
+                      "
+                    >
                       <div class="bubble">
                         <img src="assets/img/icons/office.webp" alt="" />
                         <span>Лучшее предложение</span>
