--- a/src/index.html
+++ b/src/index.html
@@ -284,39 +284,39 @@
         <section class="intro">
           <div class="container">
             <div class="bubbles">
-              <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-rectangle">
                 <div class="bubble">
                   <img src="assets/img/icons/pencil.webp" alt="" />
                   <span>Высокая конверсия в заявки</span>
                 </div>
               </div>
 
-              <div class="bubble-wrap bubble-wrap-square--small">
+              <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-square--small">
                 <div class="bubble">
                   <img src="assets/img/icons/image.webp" alt="" />
                 </div>
               </div>
 
-              <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-rectangle">
                 <div class="bubble">
                   <img src="assets/img/icons/checked.webp" alt="" />
                   <span>Готовые Интеграции</span>
                 </div>
               </div>
 
-              <div class="bubble-wrap bubble-wrap-square--small">
+              <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-square--small">
                 <div class="bubble">
                   <img src="assets/img/icons/idea.webp" alt="" />
                 </div>
               </div>
 
-              <div class="bubble-wrap bubble-wrap-square--small">
+              <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-square--small">
                 <div class="bubble">
                   <img src="assets/img/icons/binocular.webp" alt="" />
                 </div>
               </div>
 
-              <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-rectangle">
                 <div class="bubble">
                   <img src="assets/img/icons/donut.webp" alt="" />
                   <span>Эксклюзивный дизайн</span>
