--- a/src/index.html
+++ b/src/index.html
@@ -293,7 +293,7 @@
 
               <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-square--small">
                 <div class="bubble">
-                  <img src="assets/img/icons/image.webp" alt="" />
+                  <img src="assets/img/icons/Image.webp" alt="" />
                 </div>
               </div>
 
@@ -318,7 +318,7 @@
 
               <div class="bubble-wrap bubble-wrap--big-br bubble-wrap-rectangle">
                 <div class="bubble">
-                  <img src="assets/img/icons/donut.webp" alt="" />
+                  <img src="assets/img/icons/Donut.webp" alt="" />
                   <span>Эксклюзивный дизайн</span>
                 </div>
               </div>
@@ -708,7 +708,7 @@
             <picture>
               <source
                 media="(min-width: 1280px)"
-                srcset="assets/img/floors.webp"
+                srcset="assets/img/Floors.webp"
               />
               <img src="assets/img/floors--m.webp" alt="Схема этажей здания" />
             </picture>
